# voxel_game

./: .gitignore  CMakeLists.txt  README.md
include/: audio.hpp  camera.hpp  debug_tools.hpp  lighting.hpp  materials.hpp  noise.hpp  player.hpp  render_stats.hpp  settings.hpp  vk_utils.hpp
include/world/: biome.hpp  biome_map.hpp  chunk.hpp  mesher.hpp  world.hpp  world_config.hpp  world_edit.hpp  world_gen.hpp  world_gen2.hpp  world_io.hpp  world_raycast.hpp  world_stream.hpp
include/world/biomes/: biome_forest.hpp  biome_hills.hpp  biome_plain.hpp
shaders/: sky.frag  sky.vert  triangle.frag  triangle.vert  voxel.frag  voxel.vert
src/: audio.cpp  camera.cpp  debug_tools.cpp  gen_destroy_wav.cpp  main.cpp  player.cpp  settings.cpp  stb_image_impl.cpp  vk_utils.cpp
src/world/: biome_map.cpp  mesher.cpp  world _io.cpp  world.cpp  world_gen.cpp  world_gen2.cpp  world_raycast.cpp  world_stream.cpp
src/world/biomes/: biome_forest.cpp  biome_hills.cpp  biome_plain.cpp
tools/: make_atlas.py
